# good-job-bot

./: .env  README.md  pyproject.toml
good-job-bot/: old_run.py  run.py
